--- a/app/design/frontend/base/default/template/bundle/sales/order/items/renderer.phtml
+++ b/app/design/frontend/base/default/template/bundle/sales/order/items/renderer.phtml
@@ -15,6 +15,8 @@
 <?php $items = array_merge([$parentItem], $parentItem->getChildrenItems()); ?>
 <?php $_count = count ($items) ?>
 <?php $_index = 0 ?>
+<?php $_showlastRow = false ?>
+<?php $_item = $parentItem ?>
 
 <?php $_prevOptionId = '' ?>
 
