--- a/app/design/adminhtml/default/default/template/widget/grid/massaction.phtml
+++ b/app/design/adminhtml/default/default/template/widget/grid/massaction.phtml
@@ -77,7 +77,10 @@
     </td>
 </tr>
 </table>
-<?php if(!$this->getParentBlock()->canDisplayContainer()): ?>
+<?php
+/** @var Mage_Adminhtml_Block_Widget_Grid $parent */
+$parent = $this->getParentBlock();
+if (!$parent->canDisplayContainer()): ?>
 <script type="text/javascript">
     <?= $this->getJsObjectName() ?>.setGridIds('<?= $this->getGridIdsJson() ?>');
 </script>
