--- a/app/design/frontend/base/default/template/review/product/view/list.phtml
+++ b/app/design/frontend/base/default/template/review/product/view/list.phtml
@@ -67,7 +67,11 @@
         </div>
     <?php elseif($this->getParentBlock()): ?>
         <div class="rv-header empty">
-            <?= $this->getParentBlock()->getReviewsSummaryHtml($this->getProduct(), 'short', true) ?>
+            <?php
+            /** @var Mage_Catalog_Block_Product_Abstract $parent */
+            $parent = $this->getParentBlock();
+            ?>
+            <?= $parent->getReviewsSummaryHtml($this->getProduct(), 'short', true) ?>
             <button type="button" class="button" onclick="document.getElementById('review-dialog').showModal()">
                 <?= $this->__('Be the First to Review') ?>
             </button>
