--- a/app/design/frontend/base/default/template/bundle/rss/catalog/product/price.phtml
+++ b/app/design/frontend/base/default/template/bundle/rss/catalog/product/price.phtml
@@ -64,7 +64,7 @@ if ($_product->getPriceType() == 1) {
 <div class="price-box">
 <?php if ($_product->getPriceView()): ?>
     <p class="minimal-price">
-        <span class="price-label"><?= $this->__('From') ?>:</span>
+        <span class="price-label"><?= $this->__('From') ?></span>
         <?php if ($this->helper('tax')->displayBothPrices()): ?>
             <span class="price-excluding-tax">
                         <span class="label"><?= Mage::helper('tax')->__('Excl. Tax:') ?></span>
@@ -120,7 +120,7 @@ if ($_product->getPriceType() == 1) {
 <?php else: ?>
     <?php if ($_minimalPrice <> $_maximalPrice): ?>
         <p class="price-from">
-            <span class="price-label"><?= $this->__('From') ?>:</span>
+            <span class="price-label"><?= $this->__('From') ?></span>
             <?php if ($this->helper('tax')->displayBothPrices()): ?>
                 <span class="price-excluding-tax">
                         <span class="label"><?= Mage::helper('tax')->__('Excl. Tax:') ?></span>
