--- a/app/design/adminhtml/default/default/template/catalog/product/price.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/price.phtml
@@ -357,7 +357,7 @@ $_inclTax = $_taxHelper->getPrice($_product, $_minimalPriceValue, $includingTax 
     <?php else: ?>
     <span class="minimal-price-link">
     <?php endif ?>
-        <span class="label"><?= $this->__('From:') ?></span>
+        <span class="label"><?= $this->__('From') ?></span>
         <span class="price" id="product-minimal-price-<?= $_id ?><?= $this->getIdSuffix() ?>">
             <?= $_coreHelper->currencyByStore($_minimalPriceDisplayValue, $_storeId, true, false) ?>
         </span>
